--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background:linear-gradient(to top,rgba(0, 0, 0, 0.404)50%,rgba(0, 0, 0, 0.404)50%), url("/img/leaves.jpg");
+    background:linear-gradient(to top,rgba(0, 0, 0, 0.404)50%,rgba(0, 0, 0, 0.404)50%), url("leaves.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
